kubernetes/auth/lldap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  namespace: auth
  labels:
    app.kubernetes.io/name: lldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: lldap
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lldap
    spec:
      enableServiceLinks: false
      priorityClassName: critical
      containers:
        - name: lldap
          image: lldap/lldap:v0.6.3
          imagePullPolicy: IfNotPresent
          ports:
            - name: ldap
              containerPort: 3890
              protocol: TCP
            - name: http
              containerPort: 17170
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 256Mi
