kubernetes/auth/lldap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap
  namespace: auth
spec:
  selector:
    app.kubernetes.io/name: lldap
  ports:
    - name: ldap
      port: 389
      targetPort: ldap
      protocol: TCP
    - name: http
      port: 17170
      targetPort: http
      protocol: TCP
