kubernetes/auth/lldap/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lldap
  namespace: auth
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lldap.home.mcnees.me`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy
          namespace: auth
      services:
        - name: lldap
          port: 17170
  tls:
    secretName: lldap-tls
